--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/ol.css">
         <link rel="stylesheet" href="resources/fontawesome-all.min.css">
-        <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
-        <link rel="stylesheet" href="./resources/qgis2web.css">
+        <link rel="stylesheet" href="resources/ol-layerswitcher.css">
+        <link rel="stylesheet" href="resources/qgis2web.css">
         <style>
         html, body {
             background-color: #a6cee3;
@@ -52,13 +52,13 @@
             </div>
         </div>
         <script src="resources/qgis2web_expressions.js"></script>
-        <script src="./resources/functions.js"></script>
-        <script src="./resources/ol.js"></script>
-        <script src="./resources/ol-layerswitcher.js"></script>
+        <script src="resources/functions.js"></script>
+        <script src="resources/ol.js"></script>
+        <script src="resources/ol-layerswitcher.js"></script>
         <script src="layers/_1.js"></script><script src="layers/_2.js"></script><script src="layers/_3.js"></script>
         <script src="styles/_1_style.js"></script><script src="styles/_2_style.js"></script><script src="styles/_3_style.js"></script>
-        <script src="./layers/layers.js" type="text/javascript"></script> 
-        <script src="./resources/Autolinker.min.js"></script>
-        <script src="./resources/qgis2web.js"></script>
+        <script src="layers/layers.js" type="text/javascript"></script> 
+        <script src="resources/Autolinker.min.js"></script>
+        <script src="resources/qgis2web.js"></script>
     </body>
 </html>
