--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <script src="resources/functions.js"></script>
         <script src="resources/ol.js"></script>
         <script src="resources/ol-layerswitcher.js"></script>
-        <script src="layers/_1.js"></script>
-        <script src="layers/_2.js"></script>
-        <script src="layers/_3.js"></script>
+        <script src="layers/one.js"></script>
+        <script src="layers/two.js"></script>
+        <script src="layers/three.js"></script>
         <script src="styles/_1_style.js"></script>
         <script src="styles/_2_style.js"></script>
         <script src="styles/_3_style.js"></script>
