--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <script src="layers/one.js"></script>
         <script src="layers/two.js"></script>
         <script src="layers/three.js"></script>
-        <script src="styles/_1_style.js"></script>
-        <script src="styles/_2_style.js"></script>
-        <script src="styles/_3_style.js"></script>
+        <script src="styles/onestyle.js"></script>
+        <script src="styles/twostyle.js"></script>
+        <script src="styles/threestyle.js"></script>
         <script src="layers/layers.js" type="text/javascript"></script> 
         <script src="resources/Autolinker.min.js"></script>
         <script src="resources/qgis2web.js"></script>
